# gallery-of-babel

./: .gitattributes  CMakeLists.txt  Gallery_of_Babel.ini  README.md  vcpkg.json
assets/: resource.rc
include/: CImg.h  glb_app.hpp
src/: Gallery_of_Babel.ini  glb_app.cpp  main.cpp  resource.rc
